projects/vb6parse/snapshots/parsers/cst/declarations/variables/public_withevents_recordset.snap
---
source: projects/vb6parse/tests/declarations/variables.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: DimStatement
      children:
        - kind: PublicKeyword
          text: Public
        - kind: Whitespace
          text: " "
        - kind: WithEventsKeyword
          text: WithEvents
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: rs
        - kind: Whitespace
          text: " "
        - kind: AsKeyword
          text: As
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: ADODB
        - kind: PeriodOperator
          text: "."
        - kind: Identifier
          text: Recordset
        - kind: Newline
          text: "\n"
